<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HelloWorldDemo</string>
    <string name="hello_world">Please enter name!</string>
    <string name="hello_world_chinese">请输入姓名！</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="action_settings">Settings</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="add_name">Add</string>
    <string name="add_name_hint">Click to add name</string>
    <string name="reset_names">Reset</string>
    <string name="reset_names_hint">Click to clear all names</string>
    <string name="next">Next</string>
    <string name="next_hint">Click to go to next screen</string>
    <string name="prev">Prev</string>
    <string name="prev_hint">Click to go to previous screen</string>
    <string name="say_hi">Hi!</string>
    <string name="phone_number">Enter phone number</string>
    <string name="url">Enter URL</string>
    <string name="call">Call</string>
    <string name="browse">Browse</string>

</resources>