<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyActivity" >

    <TextView
        android:id="@+id/hello_world_chinese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/hello_world_chinese" />

    <TextView
        android:id="@+id/hello_world"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="#000"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/hello_world"
        android:textColor="#aaa" />

    <ListView
        android:id="@+id/name_list"
        android:layout_width="wrap_content"
        android:layout_height="258dp" >

    </ListView>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="text" >

        <requestFocus />
    </EditText>

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/add_name_hint"
            android:onClick="add"
            android:text="@string/add_name" />

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/reset_names_hint"
            android:onClick="reset"
            android:text="@string/reset_names" />
        
        <Button
            android:id="@+id/buttonNext"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/next_hint"
            android:onClick="next"
            android:text="@string/next" />

    </LinearLayout>

</LinearLayout>